07-elastic-ip.tf
resource "aws_eip" "nat" {
  vpc = true
  depends_on = [aws_internet_gateway.internet-gateway]
  #instance = aws_internet_gateway.internet-gateway.id
}
